[gd_scene load_steps=3 format=3 uid="uid://ue7rvsoy6ai5"]

[ext_resource type="Script" path="res://Scripts/skill_graphic.gd" id="1_cxddq"]
[ext_resource type="Texture2D" uid="uid://dxdmv7nbq4xek" path="res://Art/Species_Bugman.png" id="2_0vx3a"]

[node name="CardGraphic" type="Control"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_cxddq")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.215902, 0.215902, 0.215902, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
alignment = 1

[node name="SkillName" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Skill Card Name"
horizontal_alignment = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Level: "
horizontal_alignment = 2

[node name="LevelValue" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "1"

[node name="HSeparator2" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Control" type="Control" parent="MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
mouse_filter = 2

[node name="Sprite2D" type="Sprite2D" parent="MarginContainer/VBoxContainer/HBoxContainer/Control"]
position = Vector2(32, 32)
texture = ExtResource("2_0vx3a")

[node name="HeroName" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Fred"

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 2

[node name="Description" type="RichTextLabel" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(250, 350)
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2
text = "Description: 
This hero is well adept at hiding, and can launch themselves "
scroll_active = false
